# tiktok-mental-health-analysis

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
Scripts/: 01_collect_videos.py  02_prepare_comment_ids.py  03_collect_comments.py  04_preprocess.py  05_score_sentiment_toxicity.py  06_embed_and_topic_model.py  07_generate_paper_outputs.py  08_export_zenodo_indexed_metrics_dataset.py  run_all.sh  run_full_pipeline.sh
tiktokresearch/: __init__.py  pipeline.py
